// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.GoogleMap className="my-classname" 1`] = `
<div
  className="uu5-bricks-google-map my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap controlled=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap controlled=true 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap default props 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableDefaultUI=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableDefaultUI=true 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableZoom=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableZoom=true 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disabled=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disabled=true 1`] = `
<div
  className="uu5-bricks-google-map uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap docKit example render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID5"
  style={Object {}}
  title={null}
>
  <GoogleMap
    googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA"
    id="uuID4"
    key="uuID4"
    latitude={50.0755381}
    longitude={14.43780049999998}
    markers={
      Array [
        Object {
          "animation": "drop",
          "latitude": 50.0754616,
          "longitude": 14.43686409999998,
        },
      ]
    }
  />
  <GoogleMap
    disableDefaultUI={true}
    googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA"
    id="uuID3"
    key="uuID3"
    zoom={5}
  />
  <GoogleMap
    googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA"
    height="300px"
    id="uuID2"
    key="uuID2"
    mapType="satellite"
    width="50%"
  />
  <GoogleMap
    disableDefaultUI={true}
    googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA"
    id="uuID1"
    key="uuID1"
    mapStyle={
      Array [
        Object {
          "elementType": "geometry",
          "stylers": Array [
            Object {
              "color": "#1d2c4d",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "stylers": Array [
            Object {
              "color": "#8ec3b9",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "stylers": Array [
            Object {
              "color": "#1a3646",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative.country",
          "stylers": Array [
            Object {
              "color": "#4b6878",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#64779e",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative.province",
          "stylers": Array [
            Object {
              "color": "#4b6878",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "landscape.man_made",
          "stylers": Array [
            Object {
              "color": "#334e87",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape.natural",
          "stylers": Array [
            Object {
              "color": "#023e58",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#283d6a",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#6f9ba5",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#1d2c4d",
            },
          ],
        },
        Object {
          "featureType": "poi.business",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#023e58",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#3C7680",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#304a7d",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#98a5be",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#1d2c4d",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "road.arterial",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#2c6675",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#255763",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#b0d5ce",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#023e58",
            },
          ],
        },
        Object {
          "featureType": "road.local",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "transit",
          "stylers": Array [
            Object {
              "color": "#98a5be",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "transit",
          "stylers": Array [
            Object {
              "color": "#1d2c4d",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#283d6a",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.station",
          "stylers": Array [
            Object {
              "color": "#3a4762",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#0e1626",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#4e6d70",
            },
          ],
        },
      ]
    }
    zoom={11}
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap draggable=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap draggable=true 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap height="300px" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "300px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap hidden=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap hidden=true 1`] = `
<div
  className="uu5-bricks-google-map uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap id="myId" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="myId"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap latitude=34.107399 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap longitude=16.107319 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mapStyle=[{"elementType":"geometry","stylers":[{"color":"#1d2c4d"}]},{"featureType":"water","elementType":"labels.text.fill","stylers":[{"color":"#4e6d70"}]}] 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mapType="roadmap" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mapType="satellite" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap markers=[{"latitude":14.12321,"longitude":17.12323,"title":"myPoint","label":"myPoint","animation":"drop","icon":"http://myOwnIcon.com"}] 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap name="myName" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel="inline" 1`] = `
<span>
  <ForwardRef
    disabled={false}
    ref_={[Function]}
  >
    <div
      className="uu5-bricks-google-map"
      id="uuID"
      style={Object {}}
      title={null}
    >
      <div
        style={
          Object {
            "height": "400px",
            "width": "100%",
          }
        }
      />
    </div>
  </ForwardRef>
  <Link
    onClick={[Function]}
  />
</span>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.GoogleMap nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.GoogleMap nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap noIndex=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap noIndex=true 1`] = `
<div
  className="uu5-bricks-google-map uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap pureRender=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap pureRender=true 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap selected=false 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap selected=true 1`] = `
<div
  className="uu5-bricks-google-map uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap width="80%" 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "80%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom=0 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom=5 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom=10 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom=20 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom=21 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;
